# catkin_ws

./: README.md
script/: circle.sh  ego.sh  exp.sh  init.sh  simulation.sh  traj.sh  traj_exp.sh
src/cnuav_ros/: README.md
src/cnuav_ros/cnuav_control/: CMakeLists.txt  circle_single_test.sh  circle_test.sh  circle_test2.sh  circle_test_exp.sh  circle_test_exp_2.sh  gate_simu_test.sh  package.xml
src/cnuav_ros/cnuav_control/include/cnuav_control/: autopilot.h  common.h  controller.h  position_controller.h  roswrapper.h  status.h  velfilter.h  visualization.h
src/cnuav_ros/cnuav_control/include/cnuav_control/mpc/: mpc.h  mpc_params.h
src/cnuav_ros/cnuav_control/launch/: ldarc.launch  multi.launch  multi_uavs.launch  multi_uavs_five.launch  multi_uavs_four.launch  multi_uavs_two.launch  simulation.launch  simulation_easy.launch  simulation_hard.launch  simulation_medium.launch  simulation_multi.launch  visulization.launch
src/cnuav_ros/cnuav_control/launch/basics/: base_quad_multi.launch  base_quad_simulation.launch  rviz.launch
src/cnuav_ros/cnuav_control/log/: log.txt
src/cnuav_ros/cnuav_control/mpc_codegen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mpc_codegen  mpc_codegen.cpp
src/cnuav_ros/cnuav_control/mpc_codegen/quadrotor_mpc_codegen/: acado_integrator.c  acado_solver.c
src/cnuav_ros/cnuav_control/msg/: TrajectoryTracking.msg
src/cnuav_ros/cnuav_control/params/: autopilot.yaml  autopilot1.yaml  autopilot2.yaml  autopilot3.yaml  autopilot4.yaml  autopilot5.yaml  mpc_controller.yaml  mpc_controller1.yaml  mpc_controller2.yaml  mpc_controller4.yaml  mpc_controller5.yaml  position_controller.yaml
src/cnuav_ros/cnuav_control/rviz/: blanck.rviz
src/cnuav_ros/cnuav_control/script/: plot_trajectory.py  plot_trajectorycp.py  streamlit_app.py
src/cnuav_ros/cnuav_control/src/: autopilot.cpp  position_controller.cpp  roswrapper.cpp  velfilter.cpp
src/cnuav_ros/cnuav_control/src/mpc/: mpc.cpp
src/cnuav_ros/cnuav_control/src/node/: cnuav_mpc_node.cpp  uav1.cpp  uav2.cpp  uav3.cpp  uav4.cpp  uav5.cpp  visualization.cpp
src/cnuav_ros/cnuav_navigation/: CMakeLists.txt  package.xml
src/cnuav_ros/cnuav_navigation/launch/: circle.launch  traj.launch  traj_exp.launch
src/cnuav_ros/cnuav_navigation/src/node/: bowknot_gen_node.cpp  circle_node.cpp  eight_traj_gen_node.cpp  one_obstacle_node.cpp  temp.cpp  two_obstalces_node.cpp
src/data_driven_mpc/Data_Driven_MPC_for_Quadrotors.egg-info/: PKG-INFO  SOURCES.txt
src/data_driven_mpc/ros_gp_mpc/acados_models/: hummingbird_acados_ocp.json  my_quad_acados_ocp.json
src/data_driven_mpc/ros_gp_mpc/devel/: _setup_util.py  env.sh  local_setup.bash  setup.bash  setup.sh  setup.zsh
src/data_driven_mpc/ros_gp_mpc/logs/catkin_tools_prebuild/: build.cmake.002.log.stderr
src/data_driven_mpc/ros_gp_mpc/nodes/: gp_mpc_node.py  reference_publisher_node.py
src/data_driven_mpc/ros_gp_mpc/src/experiments/: comparative_experiment.py  point_tracking_and_record.py
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/config/: example.yaml
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/plan_manage/launch/: advanced_param.xml  advanced_param_exp.xml  default.rviz  simple_run.launch  simple_run_exp.launch  simulator.xml
src/planner/plan_manage/src/: ego_replan_fsm.cpp  traj_server.cpp
src/ros_gp_mpc/acados_models/: hummingbird_acados_ocp.json  multi3_acados_ocp.json  my_quad_acados_ocp.json  yzh_acados_ocp.json
src/ros_gp_mpc/config/: circle_and_lemniscate_options.yaml  configuration_parameters.py  flying_room_run.yaml  hummingbird.xacro  map.yaml  multi3.xacro  simulation_run.yaml  yzh.xacro
src/ros_gp_mpc/data/: metadata.json
src/ros_gp_mpc/data/exp_dataset/train/: dataset_001.csv  dataset_002.csv
src/ros_gp_mpc/devel/: local_setup.sh  local_setup.zsh
src/ros_gp_mpc/devel/.private/catkin_tools_prebuild/: .catkin
src/ros_gp_mpc/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
src/ros_gp_mpc/launch/: gp_mpc_wrapper_exp.launch
src/ros_gp_mpc/nodes/: gp_mpc_node.py  reference_publisher_node.py
src/ros_gp_mpc/results/experiments/: metadata.json
src/ros_gp_mpc/results/images/: mse.tex
src/ros_gp_mpc/results/model_fitting/gazebo_sim_gp/: gazebo_7_0.pkl  gazebo_8_0.pkl  gazebo_9_0.pkl
src/ros_gp_mpc/src/experiments/: point_tracking_and_record.py  trajectory_test.py
src/ros_gp_mpc/src/model_fitting/: gp.py  gp_common.py  gp_fitting.py  gp_visualization.py  rdrv_fitting.py
src/ros_gp_mpc/src/quad_mpc/: create_ros_gp_mpc.py  quad_3d.py  quad_3d_optimizer.py
src/ros_gp_mpc/src/quad_mpc/c_generated_code/: Makefile  acados_sim_solver_multi3.c  acados_sim_solver_multi3.h  acados_sim_solver_my_quad.c  acados_sim_solver_yzh.c  acados_sim_solver_yzh.h  acados_solver.pxd  acados_solver_hummingbird.c  acados_solver_hummingbird.h  acados_solver_multi3.c  acados_solver_multi3.h  acados_solver_my_quad.c  acados_solver_my_quad.h  acados_solver_yzh.c  acados_solver_yzh.h  main_multi3.c  main_sim_multi3.c  main_sim_yzh.c  main_yzh.c
src/ros_gp_mpc/src/utils/: trajectories.py
src/rotors_simulator/rotors_description/urdf/: firefly.xacro  hummingbird.xacro
src/rotors_simulator/rotors_hil_interface/include/rotors_hil_interface/: hil_interface.h
src/rpg_mpc/include/rpg_mpc/: mpc_controller.h
src/rpg_mpc/launch/: mpc_controller.launch
src/rpg_mpc/src/: mpc_controller.cpp
src/rpg_quadrotor_control/control/autopilot/: package.xml
src/sbus_wrapper/: CMakeLists.txt  package.xml
src/sbus_wrapper/config/: fpv_bh.yaml  lxh.yaml  multi1.yaml  multi2.yaml  multi3.yaml  multi4.yaml  multi5.yaml  warrior.yaml  yzh.yaml  zcx.yaml
src/sbus_wrapper/include/sbus_wrapper/: sbus_wrapper.h
src/sbus_wrapper/src/: sbus_wrapper.cpp  sbus_wrapper_node.cpp
src/test/: CMakeLists.txt  test.cpp
src/vrpn_client_ros/: CMakeLists.txt
src/vrpn_client_ros/launch/: sample.launch
(+37 files in other folders)
