<?xml version="1.0"?>
<package format="2">
    <name>sbus_wrapper</name>
    <version>0.0.1</version>
    <description>ROS SBUS wrapper</description>

    <maintainer email="lucasking7@hotmail.com">tao jin</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>quadrotor_common</depend>

</package>